fixes bug on firefoxx

--- a/Assignments/Assignment9/style.css
+++ b/Assignments/Assignment9/style.css
@@ -32,10 +32,11 @@ body {
 }
 
 .carousel__wrapper img {
-    /*width: 100%;*/
-    /*height: 100%;*/
-    width: 600px;
-    height: 400px;
+    width: 100%;
+    height: 100%;
+    flex-shrink: 0;
+    /*width: 600px;*/
+    /*height: 400px;*/
     object-fit: cover;
 }
 
@@ -111,9 +112,4 @@ body {
         width: 100%;
     }
 
-    .carousel__wrapper img {
-        width: 100%;
-        height: auto;
-        object-fit: cover;
-    }
 }
